--- a/app/views/assignments/new.html.haml
+++ b/app/views/assignments/new.html.haml
@@ -1,7 +1,2 @@
-.jumbotron
-  %h1 Assignments
-  %p.lead Create a new assignment:
-  = link_to "cancel", assignments_path
-  %br
-  .row
-=render 'form'
+.text-center
+  =render 'form'
