--- a/app/views/links/new.html.haml
+++ b/app/views/links/new.html.haml
@@ -1,7 +1,2 @@
-.jumbotron
-  %h1 Links
-  %p.lead Create a new link
-  = link_to "cancel", assignment_submission_path(@assignment, @submission)
-  %br
-  .row
+.text-center
   = render 'form'
