--- a/app/views/submissions/new.html.haml
+++ b/app/views/submissions/new.html.haml
@@ -1,7 +1,2 @@
-.jumbotron
-  %h1 Submissions
-  %p.lead Create a new homework submission
-  = link_to "cancel", assignment_path(@assignment)
-  %br
-  .row
-= render 'form'
+.text-center
+  = render 'form'
