--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -1,65 +1,47 @@
-.jumbotron
-  %h1 Submissions
-  %p.lead 
-    =@submission.name
-  = link_to "Return to #{@assignment.name}", assignment_path(@assignment)
-  %br
-  .col-md-6.col-md-offset-3.text-center
-    .row
-      .list-group-item
-        = link_to "Edit HW Submission", edit_assignment_submission_path(@assignment, @submission)
-        |
-        = link_to "Delete HW Submission", assignment_submission_path(@assignment, @submission), method: :delete
-    %br
-    %br
-    .list-group-item
-      Current State:
-      %br
-      =workflow_state_helper(@submission)
-      %br
-      %br
-      - if @submission.workflow_state != "completed"
-        Change State:
-      %br
-      - if @submission.workflow_state == "new"
-        = link_to "Review", review_submission_assignment_submission_path(@assignment, @submission), method: :patch
-      -elsif @submission.workflow_state == "reviewing"
-        = link_to "Complete", complete_submission_assignment_submission_path(@assignment, @submission), method: :patch
-        |
-        = link_to "Incomplete", incomplete_submission_assignment_submission_path(@assignment, @submission), method: :patch
-      -elsif @submission.workflow_state == "incompleted"
-        = link_to "Review", review_submission_assignment_submission_path(@assignment, @submission), method: :patch
-    %br
-    .list-group-item
-      %strong Inputs:
-      %br
-      = @submission.input
-      %br
-      %br
-      %strong Links:
-      %br
-      = link_to "Add Link", new_assignment_submission_link_path(@assignment, @submission)
+.col-md-6.col-md-offset-3.text-center
+  .list-group-item
+    %strong Submission Input:
+    .text-left
       %ul
-        - @links.each do |link|
-          %li
-          = link_to link.url, assignment_submission_link_path(@assignment, @submission, link)
+        %li
+          = @submission.input
     %br
-    .list-group-item
-      Comments:
-      %br
+    %strong Submission Links:
+    %br
+    %br
+    .text-left
+      %ol
+        - @links.each do |link|
+          %li{class: 'ordered-list'}
+            = link_to link.url, "#{link.url}", target: "_blank"
+            = link_to "", edit_assignment_submission_link_path(@assignment, @submission, link), class: 'glyphicon glyphicon-pencil'
+          %br
+    = link_to "Add Link", new_assignment_submission_link_path(@assignment, @submission)
+    %br
+    = link_to "Edit HW Submission", edit_assignment_submission_path(@assignment, @submission)
+    |
+    = link_to "Delete HW Submission", assignment_submission_path(@assignment, @submission), method: :delete
+  %br
+  .list-group-item
+    %strong Comments:
+    %br
+    .text-left
       %ul
         - @comments.each do |comment|
           %li
           = comment.content
-          |
-          = comment.user.email
-          |
-          = link_to "", destroy_comment_assignment_submission_path(@submission, comment), method: :delete, class: "glyphicon glyphicon-trash"
-      %br
-      Add Comment:
-      = form_for @comment, url: create_comment_assignment_submission_path(@assignment, @submission) do |f|
-        .form-group
-          = f.label :content
-          = f.text_area :content, class: "form-control"
           %br
-          = f.submit "Submit comment", class: "btn btn-primary"
+          .text-center
+            %strong
+              = "Posted by: "
+            = " #{comment.user.last_name}, #{comment.user.first_name}"
+            |
+            = link_to "", destroy_comment_assignment_submission_path(@submission, comment), method: :delete, class: "glyphicon glyphicon-trash"
+          %br
+    = form_for @comment, url: create_comment_assignment_submission_path(@assignment, @submission) do |f|
+      .form-group
+        %strong 
+          = f.label :content, "Add Comment:"
+        = f.text_area :content, class: "form-control"
+        %br
+        = f.submit "Submit comment", class: "btn btn-primary"
