--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -20,3 +20,7 @@
       %br
       .form-group
         = f.submit "Submit", class: "btn btn-primary"
+        - if current_page?(:controller => 'users', :action => 'new')
+          = link_to "Cancel", users_path, class: "btn btn-danger"
+        -elsif current_page?(:controller => 'users', :action => 'edit')
+          = link_to "Cancel", user_path(@user), class: "btn btn-danger"
