--- a/app/views/submissions/_form.html.haml
+++ b/app/views/submissions/_form.html.haml
@@ -10,6 +10,6 @@
       .form-group
         = f.submit "Submit", class: "btn btn-primary"
         - if current_page?(:controller => 'submissions', :action => 'new')
-          = link_to "Cancel", assignment_submissions_path(@assignment), class: "btn btn-danger"
+          = link_to "Cancel", assignment_path(@assignment), class: "btn btn-danger"
         -elsif current_page?(:controller => 'submissions', :action => 'edit')
           = link_to "Cancel", assignment_submission_path(@assignment, @submission), class: "btn btn-danger"
